@@ -2545,15 +2545,17 @@ bytes_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
 		return new;
 	}
 	/* Is it an integer? */
-	size = PyNumber_AsSsize_t(x, PyExc_ValueError);
+	size = PyNumber_AsSsize_t(x, PyExc_OverflowError);
 	if (size == -1 && PyErr_Occurred()) {
+		if (PyErr_ExceptionMatches(PyExc_OverflowError))
+			return NULL;
 		PyErr_Clear();		
 	}
+	else if (size < 0) {
+		PyErr_SetString(PyExc_ValueError, "negative count");
+		return NULL;
+	}
 	else {
-		if (size < 0) {
-			PyErr_SetString(PyExc_ValueError, "negative count");
-			return NULL;
-		}
 		new = PyBytes_FromStringAndSize(NULL, size);
 		if (new == NULL) {
 			return NULL;
